# Trust

./: Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml
.cargo/: config
src/: arm.rs  hipc.rs  main.rs  svc.rs
